[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emx-dbs"
version = "0.1.0"
description = "Standalone GDS-seeded EMX DBS optimizer for passive electromagnetic layouts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=12",
  "pydantic>=1.10",
  "typer>=0.9",
  "pyyaml>=6",
  "matplotlib>=3.7",
  "gdstk>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
rf = ["scikit-rf>=0.29", "scipy>=1.10"]

[project.scripts]
emx-dbs = "emx_dbs.cli:app"

[tool.setuptools.packages.find]
include = ["emx_dbs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
