[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emx-dbs"
version = "0.1.0"
description = "Standalone GDS-seeded EMX DBS optimizer for passive electromagnetic layouts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21,<1.25; python_version < '3.9'",
  "numpy>=1.24; python_version >= '3.9'",
  "pandas>=1.5,<2.1; python_version < '3.9'",
  "pandas>=2.0; python_version >= '3.9'",
  "pyarrow>=12,<15; python_version < '3.9'",
  "pyarrow>=12; python_version >= '3.9'",
  "pydantic>=1.10,<3",
  "typer>=0.9,<0.13; python_version < '3.9'",
  "typer>=0.9; python_version >= '3.9'",
  "pyyaml>=6",
  "matplotlib>=3.7,<3.8; python_version < '3.9'",
  "matplotlib>=3.7; python_version >= '3.9'",
  "gdstk>=0.9.45,<0.9.46; python_version < '3.9'",
  "gdstk>=0.9; python_version >= '3.9'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<8; python_version < '3.9'",
  "pytest>=7; python_version >= '3.9'",
]
rf = [
  "scipy>=1.10,<1.11; python_version < '3.9'",
  "scipy>=1.10; python_version >= '3.9'",
  "scikit-rf>=0.29",
]

[project.scripts]
emx-dbs = "emx_dbs.cli:app"

[project.urls]
Homepage = "https://github.com/austinrosh/emx-dbs"
Repository = "https://github.com/austinrosh/emx-dbs"
Issues = "https://github.com/austinrosh/emx-dbs/issues"

[tool.setuptools.packages.find]
include = ["emx_dbs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
